[tool.poetry]
name = "securities-market-line"
version = "0.1.0"
description = ""
authors = ["benisbuzz <ben@danziger.uk>"]
readme = "README.md"
packages = [{include = "securities_market_line"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^2.1.2"
statsmodels = "^0.14.4"
ipykernel = "^6.29.5"
ipython = "^8.28.0"
yfinance = "^0.2.46"
matplotlib = "^3.9.2"
fredpy = "^3.2.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
